# url_shortener

./: README.md  build.sh  pyproject.toml  render.yaml
admin/: settings.py  urls.py
shorten/: forms.py  models.py  urls.py  views.py
shorten/migrations/: 0001_initial.py
shorten/templates/: index.html
