[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Rich Kevan <rskevan@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.6"
environ = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
