[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Rich Kevan <rskevan@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.6"
django-environ = "^0.11.2"
gunicorn = "^21.2.0"
dj-database-url = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
